# curses-menu

./: .ackrc  .coveragerc.in  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  TODO.md  acknowledgements.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: black.yml  codeql-analysis.yml  flake8.yml  github-action-tox.yml  lint-test-deploy.yml  mypy.yml  tests-coverage.yml
cursesmenu/: __init__.py  command_item.py  curse_menu.py  curses_menu.py  exit_item.py  external_item.py  function_item.py  item_group.py  old_curse_menu.py  old_curses_menu.py  selection_menu.py  submenu_item.py  utils.py
cursesmenu/items/: __init__.py  command_item.py  exit_item.py  external_item.py  function_item.py  menu_item.py  selection_item.py  submenu_item.py
cursesmenu/test/: test_curses_menu.py
docs/: Makefile  conf.py  cursesmenu.rst  index.rst  installation.rst  items.rst  make.bat  oldmenu.rst  requirements-docs.txt  usage.rst
docs/cursesmenu/: CursesMenu.rst  SelectionMenu.rst  functions.rst
docs/cursesmenu/items/: CommandItem.rst  ExitItem.rst  ExternalItem.rst  FunctionItem.rst  MenuItem.rst  SelectionItem.rst  SubmenuItem.rst
docs/source/: conf.py  cursesmenu.rst  index.rst  installation.rst  items.rst  usage.rst
docs/source/cursesmenu/: CursesMenu.rst  ItemGroup.rst  SelectionMenu.rst  functions.rst
docs/source/cursesmenu/items/: ExitItem.rst  MenuItem.rst  SubmenuItem.rst
examples/: example.py  issue38.py  multi-menu-program.py
examples/issues/: issue37.py  issue38.py  issue55.py
scripts/: make_coverage_rc.py
test/: base_test_case.py  conftest.py  test_clear.py  test_command_item.py  test_curses_menu.py  test_example_menus.py  test_exit_item.py  test_external_item.py  test_function_item.py  test_function_menu.py  test_graphics.py  test_item_group.py  test_menu_item.py  test_selection_item.py  test_selection_menu.py  test_submenu_item.py
test/example_menus/: basic_menu.py  menu_with_items.py  menu_with_lots_of_items.py  zero_padded_menu_with_lots_of_items.py
test/menu_data/: basic-menu-screen-0  basic-menu-screen-0-alt  menu_with_items-0  menu_with_items-0-alt
