#[build-system]
#requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm[toml]>=3.4"]
#build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  | docs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover all",
    "if sys.version_info >= \\(3, [5-9]\\):",
    "@overload",
]


[tool.coverage.run]
source = ['test', 'cursesmenu']
omit = ["cursesmenu/old_curses_menu.py"]
branch = true


[tool.pytest.ini_options]
addopts = ["-Werror"]

[tool.pydocstyle]
add_ignore = "D105"

[tool.poetry]
name = "curses-menu"
version = "0.6.5"
description = "A simple console menu system using curses"
authors = ["Paul Barrett <pmbarrett314@gmail.com>"]
license = "MIT"
repository = "http://github.com/pmbarrett314/curses-menu"
packages = [{ include = "cursesmenu" }]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["*.rst", "*.md", "*.txt", "tox.ini", "docs/Makefile", "test/**/*.py", "docs/**/*.rst", "docs/**/*.py"]
exclude = ["docs/_build"]

[tool.poetry.dependencies]
python = "^3.7"
windows-curses = { version = "2.3.0", platform = "win32" }
importlib-metadata = { version = ">=1.7.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.1"
coverage = { version = "^6.4.2", extras = ["toml"] }
pyte = "^0.8.1"
pexpect = "^4.8.0"
Deprecated = "^1.2.13"
types-Deprecated = "^1.2.9"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
