[metadata]
name = curses_menu
description = A simple console menu system using curses
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/pmbarrett314/curses-menu
author = Paul Barrett
author_email = pmbarrett314@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    windows-curses;sys_platform=='win32'
python_requires = >=3.6

[options.extras_require]
all =
    pexpect
    pyte
    pytest
test =
    pexpect
    pyte
    pytest

[aliases]
test = pytest
